--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "qunitjs": "^2.4.1"
   },
   "devDependencies": {
-    "@oracle/grunt-oraclejet": "~6.1.0",
-    "@oracle/oraclejet-tooling": "~6.1.0",
-    "grunt": "^1.0.1",
+    "@oracle/grunt-oraclejet": "^6.2.0",
+    "@oracle/oraclejet-tooling": "^6.2.0",
+    "grunt": "^1.0.4",
     "load-grunt-config": "0.19.2",
     "qunit": "^2.9.2",
     "qunit-reporter-junit": "^1.1.1"
