--- a/oraclejetconfig.json
+++ b/oraclejetconfig.json
@@ -1,20 +1,22 @@
 {
   "paths": {
-    "source": {
-      "common": "src",
-      "web": "src-web",
-      "hybrid": "src-hybrid",
-      "javascript": "js",
-      "styles": "css",
-      "themes": "themes",
-      "tests": "tests"
-    },
-    "staging": {
-      "web": "web",
-      "hybrid": "hybrid",
-      "themes": "themes"
-    }
+      "source": {
+          "common": "src",
+          "web": "src-web",
+          "hybrid": "src-hybrid",
+          "javascript": "js",
+          "typescript": "ts",
+          "styles": "css",
+          "themes": "themes"
+      },
+      "staging": {
+          "web": "web",
+          "hybrid": "hybrid",
+          "themes": "staged-themes"
+      }
   },
   "defaultBrowser": "chrome",
-  "generatorVersion": "7.0.0"
+  "sassVer": "4.13.0",
+  "defaultTheme": "alta",
+  "generatorVersion": "8.1.0"
 }
