--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "description": "An Oracle JavaScript Extension Toolkit(JET) web app",
   "dependencies": {
-    "@oracle/oraclejet": "~7.0.0"
+    "@oracle/oraclejet": "~8.1.0"
   },
   "devDependencies": {
-    "@oracle/oraclejet-tooling": "~7.0.0",
-    "qunit-reporter-junit": "^1.1.1",
-    "qunit": "^2.4.1"
+    "@oracle/oraclejet-tooling": "~8.1.0"
   },
   "engines": {
     "node": ">=0.10.0"
